--- a/app/src/main/res/layout/activity_post_book.xml
+++ b/app/src/main/res/layout/activity_post_book.xml
@@ -188,11 +188,12 @@
         android:id="@+id/pb_postBook"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="10dp"
         android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
+        android:progressDrawable="@drawable/greenprogress"
         app:layout_constraintTop_toBottomOf="@+id/iv_img_postBook" />
 
     <TextView
