--- a/app/src/main/res/layout/activity_my_book_detail.xml
+++ b/app/src/main/res/layout/activity_my_book_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pop_bg"
-    tools:context=".MyBookDetail">
+    tools:context=".View.MyBookDetail">
 
     <ImageView
         android:id="@+id/iv_bookimg_mybookdetail"
