--- a/app/src/main/res/layout/reviews_rec_view.xml
+++ b/app/src/main/res/layout/reviews_rec_view.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="7dp"
+    android:elevation="3dp"
+    app:contentPadding="4dp">
 
     <TextView
         android:id="@+id/tv_fromID_msgRec"
@@ -14,7 +17,7 @@
         android:text="From ID"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,9 +33,10 @@
         android:inputType="textMultiLine"
         android:text="Review"
         android:textAlignment="center"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fromID_msgRec"
         app:layout_constraintVertical_bias="0.0" />
