--- a/app/src/main/res/layout/activity_forum_activity.xml
+++ b/app/src/main/res/layout/activity_forum_activity.xml
@@ -7,16 +7,40 @@
     android:layout_height="match_parent"
     tools:context=".forum_activity">
 
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="79dp"
+        android:orientation="horizontal"
+        android:background="#063532"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_user_forum"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:text="User"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/tv_forum_forum"
+            android:layout_width="321dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="FORUM"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/tv_logOut_forum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
+            android:text="Log Out" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
