--- a/app/src/main/res/layout/activity_forum_activity.xml
+++ b/app/src/main/res/layout/activity_forum_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".forum_activity">
+    tools:context=".View.forum_activity">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
