--- a/app/src/main/res/layout/activity_library_book_detail.xml
+++ b/app/src/main/res/layout/activity_library_book_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LibraryBookDetail">
+    tools:context=".View.LibraryBookDetail">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline32"
@@ -72,7 +72,7 @@
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/btn_back_libBookDetail"
+            android:id="@+id/iv_back_libBookDetail"
             android:layout_width="70dp"
             android:layout_height="65dp"
             android:layout_gravity="center_vertical"
@@ -97,18 +97,18 @@
 
     <TextView
         android:id="@+id/tv_description_libBookDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="264dp"
+        android:layout_height="84dp"
         android:layout_below="@+id/tv_author_libBookDetail"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="8dp"
         android:inputType="textMultiLine"
         android:text="Description"
-        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_bookImg_libBookDetail"
         app:layout_constraintTop_toBottomOf="@+id/tv_author_libBookDetail" />
 
@@ -116,7 +116,7 @@
         android:id="@+id/tv_author_libBookDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_title_libBookDetailsCard"
+        android:layout_below="@+id/tv_booktitle_libBookDetail"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginStart="12dp"
@@ -131,8 +131,8 @@
 
     <TextView
         android:id="@+id/tv_booktitle_libBookDetail"
-        android:layout_width="168dp"
-        android:layout_height="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -142,15 +142,31 @@
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
         android:text="Title of the book"
-        android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@+id/iv_bookImg_libBookDetail"
         app:layout_constraintTop_toTopOf="@+id/guideline33" />
 
+    <TextView
+        android:id="@+id/Reviews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:inputType="textMultiLine"
+        android:text="Reviews:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_bookImg_libBookDetail" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_rv_books_category"
-        android:layout_width="412dp"
-        android:layout_height="320dp"
+        android:layout_width="410dp"
+        android:layout_height="319dp"
         android:layout_marginTop="16dp"
+        android:paddingRight="15dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -184,6 +200,21 @@
 
     <Button
         android:id="@+id/btn_Reserve_categBooks"
+        android:layout_width="126dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/round_corners"
+        android:text="Reserve Book"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/guideline34"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline35"
+        app:layout_constraintVertical_bias="0.72" />
+
+    <Button
+        android:id="@+id/btn_cancel_categBooks"
         android:layout_width="126dp"
         android:layout_height="36dp"
         android:layout_marginEnd="45dp"
