--- a/app/src/main/res/layout/reviews_recview_card.xml
+++ b/app/src/main/res/layout/reviews_recview_card.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="7dp"
+    android:layout_margin="5dp"
+    android:layout_marginHorizontal="5dp"
     android:elevation="3dp"
+    android:background="@drawable/pop_bg"
     app:contentPadding="4dp">
 
     <TextView
-        android:id="@+id/tv_fromID_msgRec"
+        android:id="@+id/tv_fromID_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -25,7 +26,6 @@
         android:id="@+id/tv_review_reviews_rec_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_author_libBookDetailsCard"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="12dp"
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_fromID_msgRec"
+        app:layout_constraintTop_toBottomOf="@+id/tv_fromID_review"
         app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
