--- a/app/src/main/res/layout/activity_library_book_detail.xml
+++ b/app/src/main/res/layout/activity_library_book_detail.xml
@@ -74,7 +74,7 @@
 
     <TextView
         android:id="@+id/tv_description_libBookDetail"
-        android:layout_width="264dp"
+        android:layout_width="246dp"
         android:layout_height="84dp"
         android:layout_below="@+id/tv_author_libBookDetail"
         android:layout_alignParentEnd="true"
@@ -171,7 +171,7 @@
         android:text="Leave a Review"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/btn_Reserve_categBooks"
-        app:layout_constraintHorizontal_bias="0.323"
+        app:layout_constraintHorizontal_bias="0.376"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline35" />
 
@@ -179,31 +179,27 @@
         android:id="@+id/btn_Reserve_categBooks"
         android:layout_width="126dp"
         android:layout_height="36dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="45dp"
         android:layout_marginRight="45dp"
-        android:layout_marginBottom="60dp"
         android:background="@drawable/round_corners"
         android:text="Reserve Book"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/guideline34"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline35"
-        app:layout_constraintVertical_bias="0.72" />
+        app:layout_constraintTop_toTopOf="@+id/guideline35" />
 
     <Button
         android:id="@+id/btn_cancel_categBooks"
         android:layout_width="126dp"
         android:layout_height="36dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="45dp"
         android:layout_marginRight="45dp"
-        android:layout_marginBottom="60dp"
         android:background="@drawable/round_corners"
         android:text="Cancel Reservation"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/guideline34"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline35"
-        app:layout_constraintVertical_bias="0.72" />
+        app:layout_constraintTop_toTopOf="@+id/guideline35" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
