Library slide in menu done Filter by user experience and back to dashboard working

--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -53,8 +53,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/left_menu"
         android:orientation="vertical"
-        android:padding="20dp"
         android:visibility="invisible"
+        android:padding="20dp"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -178,6 +179,7 @@
                 android:tint="#009688" />
 
             <TextView
+                android:id="@+id/tv_back_library"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
