--- a/app/src/main/res/drawable/pop_bg.xml
+++ b/app/src/main/res/drawable/pop_bg.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:startColor="#C5F3EC"
-        android:endColor="@color/white"
-        android:angle="135"/>
+    <solid
+        android:color="#C5F3EC"/>
     <corners
         android:radius="10dp"/>
 
