--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -92,7 +92,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline21" />
+        app:layout_constraintTop_toTopOf="@+id/guideline21"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btn_topic_itemList"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/roundbutton"
+        android:gravity="center"
+        android:text="Start New Topic"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_books_itemList" />
 
     <ImageView
         android:id="@+id/iv_library_bottom_itemList"
@@ -233,5 +248,17 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.20"
         app:layout_constraintGuide_begin="20dp" />
+
+    <ImageView
+        android:id="@+id/iv_market_itemlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/iv_moodle_bottom_itemList"
+        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintStart_toEndOf="@+id/iv_library_bottom_itemList"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.77"
+        app:srcCompat="@drawable/market_small" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
