--- a/app/src/main/res/layout/activity_post_lib_book.xml
+++ b/app/src/main/res/layout/activity_post_lib_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_dashboard"
-    tools:context=".Post_lib_Book">
+    tools:context=".View.Post_lib_Book">
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -48,33 +48,32 @@
         app:layout_constraintGuide_percent="1.0"
         app:layout_constraintGuide_begin="20dp" />
 
+
     <Button
         android:id="@+id/btn_next_postLib"
         android:layout_width="145dp"
         android:layout_height="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/roundbutton"
         android:text="Next"
         android:textColor="@color/white"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pb_postBook" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_progress_PostLib" />
 
     <Button
         android:id="@+id/btn_upload_postLib"
         android:layout_width="145dp"
         android:layout_height="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/roundbutton"
         android:text="Upload"
         android:textColor="@color/white"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pb_postBook" />
-
+        app:layout_constraintTop_toBottomOf="@+id/tv_progress_PostLib" />
 
     <TextView
         android:id="@+id/hello2"
@@ -131,17 +130,17 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         android:progressDrawable="@drawable/greenprogress"
-        app:layout_constraintTop_toBottomOf="@+id/iv_img_postBook" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_img_postLib" />
 
     <TextView
         android:id="@+id/tv_progress_PostLib"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:text="Image Uploading"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pb_postBook" />
+        app:layout_constraintTop_toBottomOf="@+id/pb_postLib" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
