--- a/app/src/main/res/layout/forum_topic_card.xml
+++ b/app/src/main/res/layout/forum_topic_card.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:layout_marginHorizontal="5dp"
+    android:padding="10dp"
     android:elevation="3dp"
     android:background="@drawable/messages_forum_style"
     app:contentPadding="4dp">
@@ -15,11 +16,8 @@
         android:id="@+id/tv_fromID_forum_topic_rec_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="From ID"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,17 +27,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
         android:text="Main Subject"
         android:textAlignment="center"
         android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fromID_forum_topic_rec_view" />
 
+    <TextView
+        android:id="@+id/tv_date_forum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:text="date"
+        app:layout_constraintStart_toEndOf="@+id/tv_fromID_forum_topic_rec_view"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
