--- a/app/src/main/res/layout/activity_add_forum_comment.xml
+++ b/app/src/main/res/layout/activity_add_forum_comment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pop_bg"
-    tools:context=".AddForumComment">
+    tools:context=".View.AddForumComment">
 
     <EditText
         android:id="@+id/et_comment_newCom"
